<resources>
    <string name="app_name">ReadsApp</string>
    <string name="name_author">Author : </string>
    <string name="name_edition">Edition :</string>
    <string name="name_year">Year :</string>
    <string name="name_topic">Topic :</string>
    <string name="name_code">Book code :</string>
    <string name="name_summary">Summary :</string>
    <string name="name_Calendar">Calendar</string>
    <string name="name_nameuser">User :</string>
    <string name="name_age">Age :</string>
    <string name="name_setting">Setting</string>
    <string name="Create_list">Create new list</string>
    <string name="name_create">Create</string>
    <string name="name_Image">Image</string>
    <string name="create_ok_msg">list created successfully</string>
    <string name="create_cancel_msg">canceled new list</string>
    <string name="create_entry_msg">you have not named the new list</string>
    <string name="deleteOneDialogTitle">Are you sure you want to delete this?</string>
    <string name="okDeleteDialog">OK</string>
    <string name="cancelDeleteDialog">Cancel</string>
    <string name="noList">you have no lists created</string>


    <!--    DISCOVER-->
    <string name="btnFiction">Fiction</string>
    <string name="btnRomance">Romance</string>
    <string name="btnThriller">Mystery</string>
    <string name="btnAdventure">Adventure</string>
    <string name="btnClassic">Classics</string>
    <string name="fantasy">Fantasy</string>
    <string name="horror">Horror</string>
    <string name="biography">Biography</string>
    <string name="history">History</string>

    <!--    SETTINGS-->
    <string name="search_title">Search Method</string>
    <string name="search_descp">choose if you want to search for a book by ISBN or by title</string>
    <string name="method_title">Title</string>
    <string name="method_ISBN">ISBN</string>
    <string name="Data_user">Data User</string>
    <string name="name_user">Name: </string>
    <string name="age_user">Age: </string>
    <string name="button_setting">Save Data User</string>
    <string name="No_user">you have to write your name and you years for save your user</string>

    <!-- CHALLENGES -->
    <string name="tab_current">CURRENT</string>
    <string name="tab_completed">COMPLETED</string>
    <string name="add_daily">DAILY READ COMPLETED</string>
    <string name="new_challenge_days">Days to complete challenge…</string>
    <string name="dialog_delete_challenge">Are you sure you want to delete this challenge permanently from your device?</string>

    <!-- CALENDAR -->
    <string name="title_calendar_dialog">Create date book</string>
    <string name="cale_date">Date: </string>
    <string name="cale_book">Book: </string>
    <string name="No_books">First you have to save some book</string>

    <!-- DILAOG READING -->
    <string name="titlE_reading">Reading quote</string>
    <string name="No_reading">No appointment reading</string>
</resources>
