<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSetting_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvdescrp_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search_descp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetting_s" />

    <RadioGroup
        android:id="@+id/rgmethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdescrp_setting">

        <RadioButton
            android:id="@+id/rbtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/method_title" />

        <RadioButton
            android:id="@+id/rbisbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/method_ISBN" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvUserData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Data_user"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgmethod" />

    <EditText
        android:id="@+id/editNameUser"
        android:layout_width="204dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/editAgeUser"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername_setting" />

    <TextView
        android:id="@+id/tvAgeUser"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/name_age"
        app:layout_constraintBottom_toTopOf="@+id/editAgeUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvUsername_setting"
        app:layout_constraintTop_toBottomOf="@+id/tvUserData" />

    <TextView
        android:id="@+id/tvUsername_setting"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_user"
        app:layout_constraintEnd_toStartOf="@+id/tvAgeUser"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserData" />

    <EditText
        android:id="@+id/editAgeUser"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editNameUser"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername_setting" />

    <Button
        android:id="@+id/bSaveDataUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/drawable_botones"
        android:text="@string/button_setting"
        android:textColor="@color/color_texto_botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAgeUser" />

</androidx.constraintlayout.widget.ConstraintLayout>