<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnThriller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnThriller"
                app:layout_constraintStart_toEndOf="@id/btnRomance"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnRomance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRomance"
                app:layout_constraintStart_toEndOf="@id/btnFiction"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/btnFiction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnFiction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutBtn">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDiscover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>